# open-llms-101

./: .gitignore  README.md  make_figure.ipynb  ollama.ipynb  open_llms_huggingface.ipynb  pyproject.toml
R1-Distill-SFT-sample/: data-00000-of-00001.arrow  dataset_info.json  state.json
